--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
         }
 
         .game-area {
-            display: flex;
+            display: grid;
+            grid-template-columns: 1fr 70px;
+            grid-template-rows: auto 1fr auto;
             gap: 10px;
             margin-top: 15px;
-            align-items: flex-start; /* 顶部对齐 */
         }
 
         .canvas-wrapper {
-            flex: 1;
+            grid-column: 1;
+            grid-row: 1 / 3;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -90,9 +92,24 @@
             max-width: 100%;
         }
 
+        .right-panel {
+            grid-column: 2;
+            grid-row: 1 / 3;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+        }
+
         .next-canvas-wrapper {
             display: flex;
-            align-items: flex-start;
+            justify-content: center;
+        }
+
+
+        .pause-wrapper{
+            display: flex;
+            align-items: flex-end;
         }
 
         #nextCanvas {
@@ -102,24 +119,28 @@
         }
 
         .controls {
+            grid-column: 1 / -1;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 8px;
-            margin-top: 15px;
+            margin-top: 8px;
         }
 
-        .controls-row {
+        .btn-down-wrapper {
             grid-column: 1 / -1;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 8px;
+        }
+
+        .btn-full {
+            width: 100%;
+            font-size: 14px;
+            padding: 8px;
         }
 
         .btn {
             background: linear-gradient(135deg, #667eea, #764ba2);
             color: white;
             border: none;
-            padding: 10px;
+            padding: 8px;
             border-radius: 10px;
             font-size: 20px;
             cursor: pointer;
@@ -134,11 +155,6 @@
             box-shadow: 0 2px 5px rgba(102, 126, 234, 0.4);
         }
 
-        .btn-half {
-            font-size: 14px;
-            padding: 10px;
-        }
-
         .btn-left {
             grid-column: 1;
         }
@@ -149,6 +165,12 @@
 
         .btn-right {
             grid-column: 3;
+        }
+
+        .btn-pause {
+            background: linear-gradient(135deg, #FFD93D, #f4c802);
+            color: #FFF;
+            font-weight: bold;
         }
 
         .game-over {
@@ -245,18 +267,21 @@
                 <canvas id="gameCanvas" width="320" height="640"></canvas>
                 <div class="pause-overlay" id="pauseOverlay">暂停中</div>
             </div>
-            <div class="next-canvas-wrapper">
-                <canvas id="nextCanvas" width="64" height="64"></canvas>
+            <div class="right-panel">
+                <div class="next-canvas-wrapper">
+                    <canvas id="nextCanvas" width="64" height="64"></canvas>
+                </div>
+                <div class="pause-wrapper">
+                    <button class="btn btn-full btn-pause" id="btnPause" style="font-size: 16px; padding: 8px;">暂停</button>
+                </div>
             </div>
-        </div>
-
-        <div class="controls">
-            <button class="btn btn-left" id="btnLeft">◀</button>
-            <button class="btn btn-rotate" id="btnRotate">旋转</button>
-            <button class="btn btn-right" id="btnRight">▶</button>
-            <div class="controls-row">
-                <button class="btn btn-half" id="btnDown">加速下落</button>
-                <button class="btn btn-half" id="btnPause">暂停</button>
+            <div class="controls">
+                <button class="btn btn-left" id="btnLeft">◀</button>
+                <button class="btn btn-rotate" id="btnRotate">旋转</button>
+                <button class="btn btn-right" id="btnRight">▶</button>
+            </div>
+            <div class="btn-down-wrapper">
+                <button class="btn btn-full" id="btnDown">下落</button>
             </div>
         </div>
     </div>
