--- a/index.html
+++ b/index.html
@@ -240,12 +240,15 @@
             font-size: 24px;
             display: none;
         }
+        
     </style>
 </head>
 <body>
     <div class="game-container">
         <div class="game-header">
-            <h1>🍬 俄罗斯方块 🍬</h1>
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px;">
+                <h1 style="margin: 0;">🍬 俄罗斯方块 🍬</h1>
+            </div>
             <div class="stats">
                 <div class="stat-box">
                     <div class="label">分数</div>
